# prettyscope-clap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: compile-options.cmake
docs/: DAW_HOST_MATRIX.md  DAW_TEST_CHECKLIST.md  DAW_TEST_QUICKSTART.md  DAW_TEST_REPORT_TEMPLATE.md  PLUGIN_BRIDGE_PLAN.md  PLUGIN_IDENTITY_AUDIT.md  RELEASE_READINESS_AUDIT.md  VISUAL_CONTROL_MANIFEST.md
docs/test-reports/: README.md
libs/: CMakeLists.txt
resources/: NightlyBlurb.md  ReadmeZip.txt
resources/mac_installer/: Icon.icns
scripts/: apply-daw-test-answer-sheet.ps1  build-test-install-local-plugin.ps1  fix_file_comments.pl  fix_header_guards.pl  install-local-plugin.ps1  new-daw-test-answer-sheet.ps1  new-daw-test-bundle-manifest.ps1  new-daw-test-bundle.ps1  new-daw-test-report.ps1  new-dot-image-test-assets.ps1  new-release-candidate-summary.ps1  open-daw-test-handoff.ps1  prepare-daw-test.ps1  review-daw-test-report.ps1  review-latest-daw-test-report.ps1  show-daw-host-matrix.ps1  show-daw-release-gates.ps1  show-daw-test-dashboard.ps1  show-daw-test-gaps.ps1  show-daw-test-next-action.ps1  show-daw-test-report-index.ps1  show-latest-daw-test-artifacts.ps1  show-local-plugin-status.ps1  show-release-objective-coverage.ps1  submit-daw-test-report.ps1  submit-latest-daw-test-report.ps1  test-daw-answer-sheet.ps1  test-daw-handoff-current.ps1  test-daw-host-matrix.ps1  test-daw-next-action-routing.ps1  test-daw-readiness.ps1  test-daw-report-artifact-update.ps1  test-daw-report-classification.ps1  test-daw-report-field-update.ps1  test-daw-test-bundle.ps1  test-dot-image-clear-source.ps1  test-dot-image-load-source.ps1  test-dot-image-renderer-source.ps1  test-dot-image-save-source.ps1  test-dot-image-state-source.ps1  (+7 more)
src/: configuration.h
src/clap/: plugin-clap-entry-impl.cpp  plugin-clap-entry-impl.h  plugin-clap-entry.cpp  plugin-clap.cpp
src/engine/: engine.cpp  engine.h  patch.cpp  patch.h  voice.cpp  voice.h
src/presets/: preset-manager.cpp  preset-manager.h
src/scope/: scope-audio-snapshot.h  scope-visual-state.h  visual-parameters.h
src/ui/: dot-image-codec.cpp  dot-image-codec.h  main-panel.cpp  main-panel.h  patch-data-bindings.h  phosphor-scope-renderer.cpp  phosphor-scope-renderer.h  plugin-editor.cpp  plugin-editor.h  preset-data-binding.h  scope-opengl-view.cpp  scope-opengl-view.h  scope-renderer.h  scope-snapshot-inspector.cpp  scope-snapshot-inspector.h  simple-xy-scope-renderer.cpp  simple-xy-scope-renderer.h  ui-defaults.h
tests/: CMakeLists.txt  dsp_basics.cpp  test_main.cpp
